# realtime-transcribe

./: README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: config.py  db.py  helpers.py  main.py  models.py  schemas.py
backend/app/routers/: sessions.py  websocket.py
backend/migrations/models/: 0_20251201192440_init.py
backend/tests/: conftest.py  test_session_api.py
frontend/: .dockerignore  .env.example  Dockerfile  README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.js  page.js
frontend/app/history/: page.js
frontend/app/history/[id]/: page.js
frontend/src/: ThemeRegistry.jsx
frontend/src/components/: ClientDate.jsx  Header.jsx  SessionCard.jsx
